--- a/trunk/Alatca/css/layoutit.css
+++ b/trunk/Alatca/css/layoutit.css
@@ -19,7 +19,9 @@ body {
 @media (max-width: 979px) {
 	.navbar-fixed-top { position:fixed; }
 }
-.navbar-inverse .brand {width:180px; color:#fff; }
+.navbar-inverse .brand {width:278px; color:#fff; }
+.navbar-inverse .navbar-inner {
+height: 50px;}
 .brand img {float:left; margin:2px 10px 0 0; }
 .brand .label { 
 	position:relative; 
